--- a/app/src/main/res/layout/item_snapshot.xml
+++ b/app/src/main/res/layout/item_snapshot.xml
@@ -7,6 +7,7 @@
 
 
     <ImageButton
+        android:contentDescription="@string/imagendelete"
         android:id="@+id/btnDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,6 +41,7 @@
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <ImageView
+        android:contentDescription="@string/imagen_seleccionada"
         android:id="@+id/imgPhoto"
         android:layout_width="0dp"
         android:layout_height="0dp"
