--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,7 +10,7 @@
     android:id="@+id/btnLogout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Cerrar Sesion"
+    android:text="@string/cerrar_sesion"
     app:icon="@drawable/ic_exit_to_app"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
